# torch-dpmm

./: .gitignore  README.md  pyproject.toml
examples/: plot_utils.py
torch_dpmm/exp_family/: base.py  discrete.py  mv_normal.py
torch_dpmm/models/: base.py  gaussian.py
torch_dpmm/utils/: constraints.py
