[project]
name = "torch_dpmm"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
version = "0.0.6"
authors = [
  { name="Daniele Castellana", email="danielecastellana22@gmail.com" },
]
description = "A torch implementation of DPMM"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'torch~=2.8.0',
    'numpy~=2.3.3',
    'scipy~=1.16.2',
    'scikit-learn~=1.7.2'
]

[project.urls]
Homepage = "https://github.com/danielecastellana22/torch_dp"
